--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "daspeweb/looden",
+    "name": "mthsalberti/looden",
     "type": "library",
     "description": "Laravel extension to increase developers productivity ",
     "authors": [
