Só para atualizar a versão

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Laravel extension to increase developers productivity ",
     "authors": [
         {
-            "name": "Guilherme Reis",
+            "name": "Guilherme Monteiro Reis",
             "email": "guilherme.reis@daspeweb.com.br"
         }
     ],
